feat: rollback some router to uri params
